# forklift

./: .dockerignore  .forkliftignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-FSL  LICENSE-MIT  LICENSING.md  README.md  install.ps1  install.sh  pult.module.yaml  pult.yaml
.github/workflows/: aws-integration.yml  bench.yml  ci.yml  release.yml
crates/forklift/: .forkliftignore  Cargo.toml
crates/forklift-aws-lambda/: Cargo.toml
crates/forklift-aws-lambda/src/: blocking.rs  entrypoint.rs  error.rs  head.rs  lib.rs  memory.rs  scratch.rs  store.rs
crates/forklift-aws-lambda/src/aws/: config.rs  dynamo.rs  mod.rs  s3.rs  sdk.rs
crates/forklift-aws-lambda/tests/: aws_integration.rs  entrypoint.rs  protocol.rs
crates/forklift-core/: Cargo.toml
crates/forklift-core/src/: enums.rs  error.rs  globals.rs  lib.rs  model.rs  parser.rs  traits.rs  util.rs
crates/forklift-core/src/builder/: inventory.rs  object.rs
crates/forklift-core/src/builder/inventory/version/: v2024_09_04.rs
crates/forklift-core/src/builder/object/: blob.rs  loose_object_builder.rs  parcel.rs  tree.rs
crates/forklift-core/src/builder/object/blob/: blob_object_builder.rs
crates/forklift-core/src/builder/object/blob/version/: v2024_09_04.rs
crates/forklift-core/src/builder/object/parcel/: parcel_object_builder.rs
crates/forklift-core/src/builder/object/parcel/version/: v2024_09_04.rs  v2026_07_02.rs
crates/forklift-core/src/builder/object/tree/: tree_object_builder.rs
crates/forklift-core/src/builder/object/tree/version/: v2024_09_04.rs  v2026_07_02.rs
crates/forklift-core/src/enums/: config_scope.rs  diff_type.rs  dir_entry_type.rs  inventory_item_state.rs  inventory_version.rs  object.rs  object_type.rs  parcel_action_type.rs
crates/forklift-core/src/enums/object/: blob_version.rs  compact_parcel_version.rs  loose_object_version.rs  parsed_object.rs  tree_version.rs
crates/forklift-core/src/model/: blob.rs  diff.rs  hooks.rs  inventory.rs  object.rs  operator.rs  parcel.rs  parcel_action.rs  remote.rs  task.rs  tree_item.rs
crates/forklift-core/src/model/object/: blob_object.rs  loose_object.rs  parcel_object.rs  tree_object.rs
crates/forklift-core/src/model/task/: base_task_context.rs  change_walk.rs  inventory_builder.rs  tree_builder.rs
crates/forklift-core/src/model/task/change_walk/: change_walk_context.rs
crates/forklift-core/src/model/task/inventory_builder/: inventory_builder_context.rs  inventory_builder_task.rs
crates/forklift-core/src/model/task/tree_builder/: tree_builder_context.rs
crates/forklift-core/src/parser/: inventory.rs  object.rs
crates/forklift-core/src/parser/inventory/: inventory_parser.rs  version.rs
crates/forklift-core/src/parser/inventory/version/: v2024_09_04.rs
crates/forklift-core/src/parser/object/: blob.rs  loose_object_parser.rs  parcel.rs  tree.rs
crates/forklift-core/src/parser/object/blob/: blob_parser.rs
crates/forklift-core/src/parser/object/blob/version/: v2024_09_04.rs
crates/forklift-core/src/parser/object/chunk/: chunk_parser.rs
crates/forklift-core/src/parser/object/parcel/: compact_parcel_parser.rs
crates/forklift-core/src/parser/object/parcel/version/: v2024_09_04.rs  v2026_07_02.rs
crates/forklift-core/src/parser/object/tree/: tree_parser.rs  version.rs
crates/forklift-core/src/parser/object/tree/version/: v2024_09_04.rs  v2026_07_02.rs
crates/forklift-core/src/parser/object/version/: v2024_09_04.rs
crates/forklift-core/src/traits/: task_context.rs
crates/forklift-core/src/types/: task.rs
crates/forklift-core/src/util/: audit_utils.rs  bay_utils.rs  blame_utils.rs  bundle_utils.rs  byte_utils.rs  cherry_pick_utils.rs  config_utils.rs  deliver_utils.rs  delta_utils.rs  diff.rs  fanout_utils.rs  file_utils.rs  gc_utils.rs  graph_utils.rs  haul_utils.rs  hook_utils.rs  inventory_utils.rs  journal_utils.rs  lcs.rs  lock_utils.rs  manifest_utils.rs  merge_utils.rs  object_utils.rs  office_utils.rs  pack_utils.rs  pallet_utils.rs  park_utils.rs  path_utils.rs  prune_utils.rs  remote_utils.rs  scope_utils.rs  shift_utils.rs  sign_utils.rs  stack_utils.rs  stocktake_utils.rs  tag_utils.rs  tree_utils.rs  warehouse_utils.rs
crates/forklift-core/tests/: fuzz_formats.rs
crates/forklift-server/: Cargo.toml
crates/forklift-server/src/: main.rs  server.rs  tor.rs
crates/forklift/src/: cli.rs  commands.rs  docgen.rs  main.rs  output.rs  pager.rs  passphrase.rs
crates/forklift/src/commands/: alias.rs  audit.rs  bay.rs  blame.rs  cherry_pick.rs  compact.rs  config.rs  conflicts.rs  consolidate.rs  deliver.rs  diff.rs  expand.rs  export_git.rs  franchise.rs  haul.rs  help.rs  history.rs  import_git.rs  lift.rs  load.rs  lower.rs  maintenance.rs  manifest.rs  mcp.rs  narrow.rs  office.rs  palletize.rs  park.rs  peek.rs  peer.rs  prepare.rs  profile.rs  remove.rs  restore.rs  scope.rs  scope_prune.rs  self_update.rs  shift.rs  show.rs  stack.rs  (+6 more)
crates/forklift/tests/: audit_bounds.rs  cli.rs  crash_consistency.rs  determinism.rs  remote.rs
docs/: BENCHMARK.md  COMPARISON.md  DEPLOYMENT.md  DESIGN.html  DESIGN.md  MACHINE_INTERFACE.md  OBJECT_STORE_SCALING.md  PARALLELIZATION_PLAN.md  SERVER.md
docs/codes/: BLOB_OBJECT_FORMAT_VERSION_CODES.md  COMPACT_PARCEL_OBJECT_FORMAT_VERSION_CODES.md  DIR_ENTRY_TYPE_CODES.md  LOOSE_OBJECT_FORMAT_VERSION_CODES.md  OBJECT_TYPE_CODES.md  PARCEL_ACTION_TYPE_CODES.md  TREE_OBJECT_FORMAT_VERSION_CODES.md
docs/format/: BLOB_OBJECT_FORMAT.md  BUNDLE_FORMAT.md  COMPACT_PARCEL_OBJECT_FORMAT.md  HOOK_PROTOCOL.md  LOOSE_OBJECT_FORMAT.md  PALLET_REFS.md  PARCEL_SIGNATURE_FORMAT.md  RECIPE_OBJECT_FORMAT.md  REMOTE_PROTOCOL.md  SCOPE_FILE_FORMAT.md  TRACKED_METADATA.md  TREE_OBJECT_FORMAT.md
docs/guide/: README.md  cli.md  contributing.md  p2p-tor.md  trust-and-identity.md
