[workspace]
resolver = "2"
members = [
    "crates/forklift-core",
    "crates/forklift",
    "crates/forklift-server",
    "crates/forklift-aws-lambda",
]

[workspace.package]
version = "0.1.7"
edition = "2021"
repository = "https://github.com/lonic-software/forklift"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
forklift-core = { path = "crates/forklift-core" }
axum = "0.8"
blake3 = "1.5.4"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
zstd = "0.13.2"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["trace", "compression-zstd", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1.16.0"
flume = "0.11.0"
libc = "0.2"
memmap2 = "0.9"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
file-id = "0.2.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "zstd", "gzip"] }
percent-encoding = "2"
regex = "1.10.6"
toml_edit = "0.23"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rpassword = "7"
# Constant-time secret comparison (bearer tokens): already in the tree transitively via
# ed25519-dalek, promoted to a direct dependency for the two server heads' auth checks so a
# byte-wise `==` never regresses back in. Zero dependencies of its own — pins no new crate.
subtle = "2.6"
