[package]
name = "forklift-aws-lambda"
description = "Forklift — the AWS serverless head: Lambda functions so anyone can host forklift on AWS serverless infrastructure."
version.workspace = true
edition.workspace = true
repository.workspace = true
# Server head: source-available under the Functional Source License 1.1 (converts to
# Apache-2.0 after two years). Not the workspace MIT/Apache — see LICENSING.md.
license-file = "../../LICENSE-FSL"

[dependencies]
forklift-core = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

# The AWS SDK layer (milestone C): real S3 + DynamoDB implementations of the store seams.
#
# TLS is deliberately routed through a ring-based rustls connector, built explicitly in
# `aws::config` and injected via `.http_client(...)`. The SDKs' own default connector
# (`default-https-client`) pulls `rustls-aws-lc` → `aws-lc-sys`, a C/cmake build; `ring`
# is already in the workspace tree (reqwest), needs no native toolchain, and is the crypto
# provider forklift already trusts. So the service crates carry only `rt-tokio` (no default
# features, no TLS feature) and the connector comes from `aws-smithy-http-client/rustls-ring`.
aws-config = { version = "1.8", default-features = false, features = ["behavior-version-latest", "rt-tokio"] }
aws-sdk-s3 = { version = "1.128", default-features = false, features = ["rt-tokio"] }
aws-sdk-dynamodb = { version = "1.110", default-features = false, features = ["rt-tokio"] }
aws-smithy-http-client = { version = "1.1", default-features = false, features = ["rustls-ring"] }
aws-smithy-runtime-api = { version = "1", features = ["client"] }
aws-smithy-types = "1"
