[package]
name = "forklift-aws-lambda"
description = "Forklift — the AWS serverless head: Lambda functions so anyone can host forklift on AWS serverless infrastructure."
version.workspace = true
edition.workspace = true
repository.workspace = true
# Server head: source-available under the Functional Source License 1.1 (converts to
# Apache-2.0 after two years). Not the workspace MIT/Apache — see LICENSING.md.
license-file = "../../LICENSE-FSL"

[dependencies]
forklift-core = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
subtle = { workspace = true }

# The HTTP edge speaks the lightweight `http` crate (already in the tree via the AWS SDK), not
# `lambda_http`, so the pure router `entrypoint::handle` is testable without any Lambda runtime
# and the runtime crates stay out of the library entirely (see the `lambda` feature below).
http = "1"

# The AWS SDK layer: real S3 + DynamoDB implementations of the store seams.
#
# TLS is deliberately routed through a ring-based rustls connector, built explicitly in
# `aws::config` and injected via `.http_client(...)`. The SDKs' own default connector
# (`default-https-client`) pulls `rustls-aws-lc` → `aws-lc-sys`, a C/cmake build; `ring`
# is already in the workspace tree (reqwest), needs no native toolchain, and is the crypto
# provider forklift already trusts. So the service crates carry only `rt-tokio` (no default
# features, no TLS feature) and the connector comes from `aws-smithy-http-client/rustls-ring`.
aws-config = { version = "1.8", default-features = false, features = ["behavior-version-latest", "rt-tokio"] }
aws-sdk-s3 = { version = "1.128", default-features = false, features = ["rt-tokio"] }
aws-sdk-dynamodb = { version = "1.110", default-features = false, features = ["rt-tokio"] }
aws-smithy-http-client = { version = "1.1", default-features = false, features = ["rustls-ring"] }
aws-smithy-runtime-api = { version = "1", features = ["client"] }
aws-smithy-types = "1"

# Stream combinators (`buffer_unordered`) for the S3 store's bulk presence probe: the ref-update
# chunk-presence gate fans its `HeadObject`s out with bounded concurrency instead of walking a large
# recipe's thousands of chunks one round trip at a time (which API Gateway's 29 s ceiling forbids).
# Only the stream utilities are needed, not the bundled executor; `futures` is already in the tree
# transitively via the AWS SDK, so this promotes it to a direct dependency without pinning anything
# new.
futures = { version = "0.3", default-features = false, features = ["std"] }

# The Lambda runtime adapters: only the two binaries need them, so they
# are optional and gated behind `lambda`. A plain `cargo build`/`cargo test` never compiles
# them, and their default features are trimmed — the Runtime API is plaintext localhost, so no
# TLS provider is pulled in and `aws-lc` stays out of the tree (the same `ring`-only stance the
# store layer takes). Enable with `--features lambda` to build the deploy artifacts.
lambda_http = { version = "0.17", default-features = false, features = ["apigw_http", "apigw_rest"], optional = true }
lambda_runtime = { version = "0.14", default-features = false, optional = true }
aws_lambda_events = { version = "0.18", default-features = false, features = ["s3"], optional = true }

[features]
# The two deploy binaries and the runtime crates they need. Off by default so the library and
# its test suites build without a Lambda runtime.
lambda = ["dep:lambda_http", "dep:lambda_runtime", "dep:aws_lambda_events"]

# The control-plane function behind API Gateway: routes the protocol to `Head` methods.
[[bin]]
name = "forklift-aws-control-plane"
path = "src/bin/control-plane.rs"
required-features = ["lambda"]

# The staging verifier triggered by S3 object-created events: verify-and-promote for large blobs.
[[bin]]
name = "forklift-aws-verifier"
path = "src/bin/verifier.rs"
required-features = ["lambda"]

[dev-dependencies]
# Following a `307` to a presigned S3 URL by hand in the LocalStack-gated end-to-end test —
# the workspace's existing (ring-based) client, added only for tests.
reqwest = { workspace = true }

# A tiny in-test HTTP shim that serves `entrypoint::handle` over the real stores, so the real
# `forklift` CLI can drive the whole staging lift end to end against LocalStack. The workspace's
# existing axum (used by `forklift-server`), only for the LocalStack-gated integration test.
axum = { workspace = true }
