[package]
name = "forklift-core"
description = "Forklift — the base logic shared by every head (objects, inventory, refs, diff, trust)."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
blake3 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zstd = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
num_cpus = { workspace = true }
flume = { workspace = true }
memmap2 = { workspace = true }
ed25519-dalek = { workspace = true }
file-id = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
percent-encoding = { workspace = true }
regex = { workspace = true }
toml_edit = { workspace = true }
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
