[package]
name = "forklift-server"
description = "Forklift — the self-hostable server head (run a forklift remote locally or on any box)."
version.workspace = true
edition.workspace = true
repository.workspace = true
# Server head: source-available under the Functional Source License 1.1 (converts to
# Apache-2.0 after two years). Not the workspace MIT/Apache — see LICENSING.md.
license-file = "../../LICENSE-FSL"

[[bin]]
name = "forklift-server"
path = "src/main.rs"

[dependencies]
forklift-core = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml_edit = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
subtle = { workspace = true }
