[package]
name = "forklift"
description = "Forklift — a version control system designed for serverless hosting (client CLI)."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "forklift"
path = "src/main.rs"

[dependencies]
forklift-core = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
rpassword = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
# The remote tests' mock hook endpoint verifies the signed hook requests with the
# same MAC helper the server signs them with.
serde_json = { workspace = true }
