[package]
name = "forklift"
description = "Forklift — a version control system designed for serverless hosting (client CLI)."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "forklift"
path = "src/main.rs"

[dependencies]
forklift-core = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
rpassword = { workspace = true }
# Optional: JSON Schema derivation for the `docgen` feature (see bin/gen-docs). A release
# build never enables this feature, so it never compiles into the shipped binary.
schemars = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[features]
docgen = ["dep:schemars", "forklift-core/docgen"]

[dev-dependencies]
# The remote tests' mock hook endpoint verifies the signed hook requests with the
# same MAC helper the server signs them with.
serde_json = { workspace = true }
